fixed footer alignment

--- a/styles.css
+++ b/styles.css
@@ -62,13 +62,12 @@ footer{
 
 .footer-title {
     font-size: 1.5rem;
-    text-align: center;
     color:#FFCC66;
     padding: 0.5rem;
 } 
 
 footer p {
-
+    margin: auto;
     font-size: 1rem;
     max-width: 600px;
     color:#FFCC66;
